--- a/test.yml
+++ b/test.yml
@@ -9,28 +9,32 @@
 
 - hosts: node1
   roles:
- #   - role: SystemConfiguration_ConfigureHostname
- #     vars:
- #         hostname: "myhost"
- #   - role: SystemConfiguration_SetNameserverSMF
- #     vars: 
- #         nameserver: "192.168.1.1"
- #         domain: "mydomain.internal"
- #         nameservice_switch: "files dns"
- #   - role: SystemConfiguration_SetNameserverNscfgImport
- #     vars: 
- #         resolv_conf_file: "/Users/joergmoellenkamp/solaris114cheatsheet/testcase_files/resolv.conf.1"
- #         nsswitch_conf_file: "/Users/joergmoellenkamp/solaris114cheatsheet/testcase_files/resolv.conf.1"   
- #   - role: LocalesTimezoneKeyboard_InstallNlsadm
- #   - role: LocalesTimezoneKeyboard_GetCurrentConfiguration
- #   - role: LocalesTimezoneKeyboard_ListAvailableTimezones
- #   - role: LocalesTimezoneKeyboard_ListAvailableConsoleKeymaps
- #   - role: LocalesTimezoneKeyboard_SetTimezone
- #     vars:
- #         timezone: "Europe/Berlin"
- #   - role: LocalesTimezoneKeyboard_SetLocale
- #      vars:
- #          locale: "de_DE.UTF-8"
-     - role: LocalesTimezoneKeyboard_SetConsoleKeymap 
-       vars:
-          console_keymap: "UK-English"
+#  - role: SystemConfiguration_ConfigureHostname
+#     vars:
+#         hostname: "myhost"
+#   - role: SystemConfiguration_SetNameserverSMF
+#     vars: 
+#         nameserver: "192.168.1.1"
+#         domain: "mydomain.internal"
+#         nameservice_switch: "files dns"
+#   - role: SystemConfiguration_SetNameserverNscfgImport
+#     vars: 
+#         resolv_conf_file: "/Users/joergmoellenkamp/solaris114cheatsheet/testcase_files/resolv.conf.1"
+#         nsswitch_conf_file: "/Users/joergmoellenkamp/solaris114cheatsheet/testcase_files/resolv.conf.1"   
+#   - role: LocalesTimezoneKeyboard_InstallNlsadm
+#   - role: LocalesTimezoneKeyboard_GetCurrentConfiguration
+#   - role: LocalesTimezoneKeyboard_ListAvailableTimezones
+#   - role: LocalesTimezoneKeyboard_ListAvailableConsoleKeymaps
+#   - role: LocalesTimezoneKeyboard_ListAvailableLocales
+#   - role: LocalesTimezoneKeyboard_SetTimezone
+#     vars:
+#         timezone: "Europe/Berlin"
+#   - role: LocalesTimezoneKeyboard_SetLocale
+#      vars:
+#          locale: "de_DE.UTF-8"
+#    - role: LocalesTimezoneKeyboard_SetConsoleKeymap 
+#      vars:
+#       console_keymap: "UK-English"
+#    - role: UsersAndRoles_RootAsUser 
+#    - role: UsersAndRoles_RootAsRole 
+    - role: UsersAndRoles_RootRoleWithUserPassword 
