--- a/roles/UsersAndRoles_RootRoleWithUserPassword/tasks/main.yml
+++ b/roles/UsersAndRoles_RootRoleWithUserPassword/tasks/main.yml
@@ -1,9 +1,7 @@
 ---
 - name: UsersAndRoles_RootRoleWithUserPassword
-  shell: rolemod -K roleauth=user root
-  become: yes
-  become_user: root
-  register: UsersAndRoles_RootRoleWithUserPassword_output
-
-- debug:
-    var: UsersAndRoles_RootRoleWithUserPassword_output.stdout
+  include_role:
+    name: UsersAndRoles_SetRoleAuth
+  vars:
+    roleauth: user
+    role: root
