--- a/test.yml
+++ b/test.yml
@@ -1,53 +1,58 @@
 ---
-- hosts: all
-  name: Test
-  tasks:
-    - name: Create a file called '/tmp/testfile.txt' with the content 'hello world'.
-      copy:
-        content: hello world
-        dest: /tmp/testfile.txt
-
 - hosts: node1
   roles:
-#  - role: SystemConfiguration_ConfigureHostname
-#     vars:
-#         hostname: "myhost"
-#   - role: SystemConfiguration_SetNameserverSMF
-#     vars: 
-#         nameserver: "192.168.1.1"
-#         domain: "mydomain.internal"
-#         nameservice_switch: "files dns"
-#   - role: SystemConfiguration_SetNameserverNscfgImport
-#     vars: 
-#         resolv_conf_file: "/Users/joergmoellenkamp/solaris114cheatsheet/testcase_files/resolv.conf.1"
-#         nsswitch_conf_file: "/Users/joergmoellenkamp/solaris114cheatsheet/testcase_files/resolv.conf.1"   
-#   - role: LocalesTimezoneKeyboard_InstallNlsadm
-#   - role: LocalesTimezoneKeyboard_GetCurrentConfiguration
-#   - role: LocalesTimezoneKeyboard_ListAvailableTimezones
-#   - role: LocalesTimezoneKeyboard_ListAvailableConsoleKeymaps
-#   - role: LocalesTimezoneKeyboard_ListAvailableLocales
-#   - role: LocalesTimezoneKeyboard_SetTimezone
-#     vars:
-#         timezone: "Europe/Berlin"
-#   - role: LocalesTimezoneKeyboard_SetLocale
-#      vars:
-#          locale: "de_DE.UTF-8"
-#    - role: LocalesTimezoneKeyboard_SetConsoleKeymap 
-#      vars:
-#       console_keymap: "UK-English"
-#    - role: UsersAndRoles_RootAsUser 
-#    - role: UsersAndRoles_RootAsRole 
-#    - role: UsersAndRoles_RootRoleWithUserPassword 
-#    - role: UsersAndRoles_SetRoleAuth 
-#      vars: 
-#       roleauth: role
-#       role: root
-#    - role: UsersAndRoles_RootRoleWithRolePassword 
-    - role: UsersAndRoles_AddUserWithProfile
-      vars: 
-          profile: "System Administrator"
-          username: "joerg"
-        
-    - role: UsersAndRoles_DeleteUser 
-      vars:
-          username: "joerg"
+    # - role: SystemConfiguration_ConfigureHostname
+    #   hostname: "myhost"
+    # - role: SystemConfiguration_SetNameserverSMF
+    #   nameserver: "192.168.1.1"
+    #   domain: "mydomain.internal"
+    #   nameservice_switch: "files dns"
+    # - role: SystemConfiguration_SetNameserverNscfgImport
+    #   resolv_conf_file: "/Users/joergmoellenkamp/solaris114cheatsheet/testcase_files/resolv.conf.1"
+    #   nsswitch_conf_file: "/Users/joergmoellenkamp/solaris114cheatsheet/testcase_files/resolv.conf.1"      
+    # - role: LocalesTimezoneKeyboard_InstallNlsadm
+    # - role: LocalesTimezoneKeyboard_GetCurrentConfiguration
+    # - role: LocalesTimezoneKeyboard_ListAvailableTimezones
+    # - role: LocalesTimezoneKeyboard_ListAvailableConsoleKeymaps
+    # - role: LocalesTimezoneKeyboard_ListAvailableLocales
+    # - role: LocalesTimezoneKeyboard_SetTimezone
+    #   timezone: "Europe/Berlin"
+    # - role: LocalesTimezoneKeyboard_SetLocale
+    #   locale: "de_DE.UTF-8"
+    # - role: LocalesTimezoneKeyboard_SetConsoleKeymap 
+    #   console_keymap: "UK-English"
+    # - role: UsersAndRoles_RootAsUser 
+    # - role: UsersAndRoles_RootAsRole 
+    # - role: UsersAndRoles_RootRoleWithUserPassword 
+    # - role: UsersAndRoles_SetRoleAuth  
+    #   roleauth: role
+    #   rolename: root
+    # - role: UsersAndRoles_RootRoleWithRolePassword 
+    # - role: UsersAndRoles_AddUserWithProfile
+    #   profile: "System Administrator"
+    #   username: "joerg1"
+    # - role: UsersAndRoles_DeleteUser 
+    #   username: "joerg1"
+    # - role: UsersAndRoles_CreateUserGeneric 
+    #   username_generic: "joerg2"
+    #   hostname_generic: "localhost"
+    # - role: UsersAndRoles_DeleteUser 
+    #   username: "joerg2"
+    # - role: UsersAndRoles_CreateUserLocal 
+    #   username: "joerg3"
+    # - role: UsersAndRoles_DeleteUser 
+    #   username: "joerg3"    
+    # - role: UsersAndRoles_CreateUserNFS 
+    #   username: "joerg4"
+    #   hostname: "localhost"
+    # - role: UsersAndRoles_DeleteUser 
+    #   username: "joerg4"  
+    - role: BootEnvironments_ListBE 
+    - role: BootEnvironments_CreateBE 
+      BootEnvironmentName: solaris-05032012
+    - role: BootEnvironments_ActivateBE 
+      BootEnvironmentName: solaris-05032012
+    - role: BootEnvironments_ActivateBE 
+      BootEnvironmentName: solaris-1
+    - role: BootEnvironments_DestroyBE
+      BootEnvironmentName: solaris-05032012 
