--- a/test.yml
+++ b/test.yml
@@ -56,18 +56,27 @@
     #   BootEnvironmentName: solaris-1
     # - role: BootEnvironments_DestroyBE
     #   BootEnvironmentName: solaris-05032012  
-    - role: Packaging_InstallPackage 
-      PackageName: "diagnostic/wireshark"
-    - role: Packaging_ShowPackageInfo 
-      PackageName: "wireshark"
+    # - role: Packaging_InstallPackage 
+    #   PackageName: "diagnostic/wireshark"
+    # - role: Packaging_ShowPackageInfo 
+    #   PackageName: "wireshark"
+    # - role: Packaging_ShowPackageContents
+    #   PackageName: "wireshark" 
     # - role: Packaging_InstallPackage 
     #   PackageName: "solaris-desktop"    
-    - role: Packaging_UninstallPackage 
-      PackageName: "diagnostic/wireshark"
+    # - role: Packaging_UninstallPackage 
+    #   PackageName: "diagnostic/wireshark"
     # - role: Packaging_UninstallPackage 
     #   PackageName: "solaris-desktop"
     # - role: Packaging_UpdateSystem 
     # - role: Packaging_ListAvailablePackages 
     # - role: Packaging_UpdateSystemDryRun 
     # - role: Packaging_ListInstalledPackages 
-    
+    # - role: Packaging_PackageSearch 
+    #   SearchFor: "math.h"
+    # - role: Packaging_DependencySearch 
+    #   PackageName: "library/libxml2"
+    # - role: Packaging_ShowPublisher 
+    - role: Packaging_ConfigureSRUUpdates 
+      SRUCertificate: /Users/joergmoellenkamp/solaris114cheatsheet/keys/pkg.oracle.com.certificate.pem
+      SRUKey: /Users/joergmoellenkamp/solaris114cheatsheet/keys/pkg.oracle.com.key.pem
