--- a/test.yml
+++ b/test.yml
@@ -80,3 +80,39 @@
     - role: Packaging_ConfigureSRUUpdates 
       SRUCertificate: /Users/joergmoellenkamp/solaris114cheatsheet/keys/pkg.oracle.com.certificate.pem
       SRUKey: /Users/joergmoellenkamp/solaris114cheatsheet/keys/pkg.oracle.com.key.pem
+
+- hosts: zfs
+  roles:
+  # - role: Packaging_ConfigureSRUUpdates 
+  #   SRUCertificate: /Users/joergmoellenkamp/solaris114cheatsheet/keys/pkg.oracle.com.certificate.pem
+  #   SRUKey: /Users/joergmoellenkamp/solaris114cheatsheet/keys/pkg.oracle.com.key.pem    
+  # - role: ZFS_CreateZFSPool 
+  #   PoolName: testpool
+  #   PoolDisks: c1t1d0
+  # - role: ZFS_DestroyZFSPool
+  #   PoolName: testpool 
+  # - role: ZFS_CreateZFSPool 
+  #   PoolName: testpool
+  #   PoolDisks: c1t1d0 c1t2d0 c1t3d0
+  # - role: ZFS_DestroyZFSPool
+  #   PoolName: testpool 
+  # - role: ZFS_CreateZFSPool 
+  #   PoolName: testpool
+  #   PoolDisks: mirror c1t1d0 c1t2d0 c1t3d0
+  # - role: ZFS_DestroyZFSPool
+  #   PoolName: testpool 
+  # - role: ZFS_CreateZFSPool 
+  #   PoolName: testpool
+  #   PoolDisks: raidz c1t1d0 c1t2d0 c1t3d0
+  # - role: ZFS_DestroyZFSPool
+  #   PoolName: testpool 
+  # - role: ZFS_CreateZFSPool 
+  #   PoolName: testpool
+  #   PoolDisks: c1t1d0 log c1t2d0 
+  # - role: ZFS_DestroyZFSPool
+  #   PoolName: testpool 
+  # - role: ZFS_CreateZFSPool 
+  #   PoolName: testpool
+  #   PoolDisks: c1t1d0 cache c1t2d0 
+  # - role: ZFS_DestroyZFSPool
+  #   PoolName: testpool
